--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <title>React App</title>
+    <title>Bhuiyan Trading</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
